--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,8 @@
-h1 {
-  color: rgb(105, 188, 255);
-  font-family: cursive;
+body {
+  padding: 0;
+  margin: 0;
+}
+
+* {
+  box-sizing: border-box;
 }
